* Implement Spatie RBAC
* Implement Profile update functionality
