# Backend/public/docs/openapi.yaml
@@ -67,11 +67,11 @@ paths:
                                 email:
                                     type: string
                                     description: 'Email Address'
-                                    example: sit
+                                    example: odit
                                 password:
                                     type: string
                                     description: Password
-                                    example: nesciunt
+                                    example: libero
                             required:
                                 - email
                                 - password
@@ -136,45 +136,82 @@ paths:
                                 first_name:
                                     type: string
                                     description: 'First Name'
-                                    example: modi
+                                    example: nihil
                                 last_name:
                                     type: string
                                     description: 'Last Name'
-                                    example: aliquam
+                                    example: id
                                 email:
                                     type: string
                                     description: Email
-                                    example: nobis
+                                    example: aliquid
                                 password:
                                     type: string
                                     description: Password
-                                    example: ut
+                                    example: aliquam
                                 company_name:
                                     type: string
                                     description: 'Company Name'
-                                    example: quae
-                                company_telephone:
+                                    example: alias
+                                company_telephone_number:
                                     type: string
                                     description: 'Company Telephone'
-                                    example: et
+                                    example: dolores
                                 company_postal_code:
                                     type: string
                                     description: 'Company Postal Code'
-                                    example: perspiciatis
+                                    example: ab
                                 company_address:
                                     type: string
                                     description: 'Company Address'
-                                    example: facilis
+                                    example: quibusdam
                             required:
                                 - first_name
                                 - last_name
                                 - email
                                 - password
                                 - company_name
-                                - company_telephone
+                                - company_telephone_number
                                 - company_postal_code
                                 - company_address
             security: []
+    /api/v1/auth/logout:
+        get:
+            summary: Logout
+            description: 'Logout out of the system.'
+            parameters:
+                -
+                    in: header
+                    name: Authorization
+                    description: ''
+                    example: 'Bearer {YOUR_AUTH_KEY}'
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example: {  }
+                                properties: {  }
+            tags:
+                - Authentication
     /oauth/authorize:
         get:
             summary: 'Authorize a client to access the user''s account.'
@@ -336,7 +373,7 @@ paths:
                 in: path
                 name: token_id
                 description: ''
-                example: ut
+                example: quod
                 required: true
                 schema:
                     type: string
@@ -468,7 +505,7 @@ paths:
                 in: path
                 name: client_id
                 description: ''
-                example: beatae
+                example: enim
                 required: true
                 schema:
                     type: string
@@ -588,10 +625,122 @@ paths:
                 in: path
                 name: token_id
                 description: ''
-                example: nihil
+                example: et
                 required: true
                 schema:
                     type: string
+    /api/v1/profile:
+        get:
+            summary: 'Show Profile Details'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                401:
+                    description: ''
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    message: Unauthenticated.
+                                properties:
+                                    message: { type: string, example: Unauthenticated. }
+            tags:
+                - Endpoints
+            security: []
+    /api/v1/profile/update:
+        post:
+            summary: 'Update Profile Details'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses: {  }
+            tags:
+                - Endpoints
+            security: []
+    /api/v1/company:
+        get:
+            summary: 'Display the specified resource.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                401:
+                    description: ''
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    message: Unauthenticated.
+                                properties:
+                                    message: { type: string, example: Unauthenticated. }
+            tags:
+                - Endpoints
+            security: []
+    /api/v1/company/update:
+        post:
+            summary: 'Update the specified resource in storage.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses: {  }
+            tags:
+                - Endpoints
+            security: []
     /:
         get:
             summary: ''
